2007-05-04  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/gauss.c (gauss_rle): fixed a bug in my last change.
	Also reduced the number of progress updates.

2007-05-04  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpprogress.c (gimp_progress_update): print a warning
	on stderr if a plug-in updates the progress too frequently.

2007-05-04  Sven Neumann  <sven@gimp.org>

	* plug-ins/ifscompose/ifscompose.c
	* plug-ins/ifscompose/ifscompose_utils.c: reduce the number of
	progress updates.

2007-05-04  Sven Neumann  <sven@gimp.org>

	* app/display/gimpstatusbar.c (gimp_statusbar_progress_message):
	reverted last change, the behavior is different.

2007-05-04  Sven Neumann  <sven@gimp.org>

	* app/display/gimpstatusbar.c (gimp_statusbar_progress_message):
	removed code that guards us from multiline messages. This happens
	later in gimp_statusbar_vprintf() anyway.

2007-05-04  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/poppler.c: removed unused functionality from the
	resolution entry widget.

2007-05-04  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/psd-load.c: Fixed bogus argument in call to
	gimp_progress_update().

2007-05-04  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpwidgets.def: removed resolution entry symbols.

2007-05-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* libgimpwidgets/gimpresolutionentry.[ch]: removed
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/Makefile.am: changed accordingly

	* plug-ins/pygimp/gimpui.defs: resolution entry api removed

	* plug-ins/common/poppler.c: resolution entry code added
	here, with unused api removed.

	Addresses (maybe fixes) bug #351281.
	
2007-05-03  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/paint-funcs.c (convolve_region): minor cleanup.

2007-05-03  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/despeckle.c: applied patch from Geert Jordaens
	plus some minor cleanups. Fixes bug #433251.

2007-05-03  Sven Neumann  <sven@gimp.org>

	Handle the core part of bug #434274:
