@@ -1,5 +1,9 @@
 2007-05-04  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/dog.c: reduced the number of progress updates.
+
+2007-05-04  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/gauss.c (gauss_rle): fixed a bug in my last change.
 	Also reduced the number of progress updates.
 
